--- a/src/pages/GetStarted/getStarted.module.css
+++ b/src/pages/GetStarted/getStarted.module.css
@@ -11,3 +11,33 @@
     background-color: rgb(212, 212, 212);
     height: 2px;
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.tooltip .tooltipText {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    /* Position above the tooltip */
+    left: 50%;
+    margin-left: -60px;
+    /* Center the tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltipText {
+    visibility: visible;
+    opacity: 1;
+}
