#05 - Adicionando design da navbar

--- a/src/components/Menu/sidemenu.module.css
+++ b/src/components/Menu/sidemenu.module.css
@@ -37,6 +37,10 @@
     border-radius: 12px;
 }
 
+.sidemenu li:hover {
+    background-color: #949494;
+}
+
 .item {
     width: 100%;
     align-items: center;
