--- a/src/components/Input/input.module.css
+++ b/src/components/Input/input.module.css
@@ -3,12 +3,12 @@
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 4px;
     box-sizing: border-box;
 }
 
-.inputButton p {
-    margin-bottom: -0.12em;
+
+.inputButton label {
     text-align: start;
 }
 
