--- a/src/utils/Loading/loading.module.css
+++ b/src/utils/Loading/loading.module.css
@@ -15,7 +15,7 @@
     animation: is-rotating 1s infinite;
     border: 6px solid #e5e5e5;
     border-radius: 50%;
-    border-top-color: #1474FF;
+    border-top-color: #000000;
     height: 50px;
     width: 50px;
     padding: 4px;
