--- a/src/components/FormCard/form.module.css
+++ b/src/components/FormCard/form.module.css
@@ -2,6 +2,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
 
 @media (min-width: 0px) and (max-width: 768px) {
