--- a/src/components/ToolBar/toolbar.module.css
+++ b/src/components/ToolBar/toolbar.module.css
@@ -7,3 +7,13 @@
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.toolbarcontainer a {
+    display: flex;
+    align-items: center;
+}
+
+.toolbarcontainer .walletIcon {
+    width: 20px;
+    height: 20px;
+}
