--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -33,10 +33,16 @@
         width: 75%;
         margin-left: 16em;
     }
-  }
+}
 
 .navbar h3 {
     align-items: center;
+}
+
+.profileIcon {
+    border-radius: 1000px;
+    width: 36px;
+    height: 36px
 }
 
 .profile {
