--- a/src/utils/SearchInput/searchinput.module.css
+++ b/src/utils/SearchInput/searchinput.module.css
@@ -4,12 +4,12 @@
   height: 44px;
   align-items: center;
   gap: 0px;
-  opacity: 0px;
+  opacity: 1px;
   border-radius: 8px 0px 0px 8px;
   
 }
 
-.input {
+.searchInput {
   width: 274px;
   height: 44px;
   padding: 6px;
@@ -25,7 +25,7 @@
 
 }
 
-.input:focus {
+.searchInput:focus {
   outline: none;
   color: rgb(0, 0, 0);
   background-color: white;
