--- a/src/pages/Expense/expenses.module.css
+++ b/src/pages/Expense/expenses.module.css
@@ -3,8 +3,25 @@
     min-width: 79vw;
 }
 
-.container li {
+.container table {
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.4);
     border-radius: 8px;
-    height: 92px;
+    background-color: #dfdede;
+    width: 100%;
+}
+
+.container tr p {
+    background-color: white;
+    border-radius: 8px;
+    padding: 4px;
+}
+
+.container tr {
+    height: 4em;
+}
+
+.line {
+    width: 100%;
+    background-color: rgb(187, 185, 185);
+    height: 1px;
 }
