--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     gap: 2em;
+    max-width: 94%;
 }
 
 .calender {
@@ -20,9 +21,10 @@
     margin-left: 0.75em;
     width: 94%;
 }
-.expenses li:hover {
+.container li:hover {
     background-color: #ffffff;
     border-radius: 8px;
+    border-bottom: 1px solid rgb(187, 185, 185);
 }
 
 .analitics {
