--- a/src/utils/SearchInput/searchinput.module.css
+++ b/src/utils/SearchInput/searchinput.module.css
@@ -32,7 +32,7 @@
   opacity: 1;
 }
 
-.searchButton {
+/* .searchButton {
   position: absolute;
   justify-content: center;
   margin-left: -2.66em;
@@ -48,4 +48,4 @@
   border-radius: 0px 8px 8px 0px;
   background-color: #000000;
   color: white;
-}
+} */
